de2/force-app/main/default/objects/TestObj__c/TestObj__c.object-meta.xml
<CustomObject>
    <label>テストオブジェクト</label>
    <nameField>
        <label>テストオブジェクト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>