de2/force-app/main/default/objects/TestObj__c/fields/aitest_10__c.field-meta.xml
<CustomField>
  <fullName>aitest_10__c</fullName>
  <label>aiテスト⑩</label>
  <type>Text</type>
  <length>255</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <description>これはテスト説明になります。</description>
  <inlineHelpText>これはヘルプテキストです。
エクセルにて改行しています。</inlineHelpText>
</CustomField>