de2/force-app/main/default/objects/TestObj__c/fields/aitest_lup__c.field-meta.xml
<CustomField>
    <fullName>aitest_lup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先参照</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>リード</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>