de2/force-app/main/default/objects/TestObj__c/fields/aitest_msd__c.field-meta.xml
<CustomField>
    <fullName>aitest_msd__c</fullName>
    <description>これはテスト説明です。
改行を含みます。</description>
    <inlineHelpText>これはテストのヘルプテキストです。
改行を含んでいます。</inlineHelpText>
    <label>リード主従</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>Accts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>