de2/force-app/main/default/objects/TestObj__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
  <fullName>ContactEmail__c</fullName>
  <label>連絡先</label>
  <type>Email</type>
</CustomField>