de2/force-app/main/default/objects/TestObj__c/fields/CustomUrl__c.field-meta.xml
<CustomField>
    <fullName>CustomUrl__c</fullName>
    <label>カスタムurl</label>
    <type>Url</type>
</CustomField>