de2/force-app/main/default/objects/TestObj__c/fields/GetVotePercent__c.field-meta.xml
<CustomField>
  <fullName>GetVotePercent__c</fullName>
  <label>得票率</label>
  <type>Percent</type>
  <precision>5</precision>
  <scale>2</scale>
</CustomField>