de2/force-app/main/default/objects/TestObj__c/fields/isVoted__c.field-meta.xml
<CustomField>
  <fullName>isVoted__c</fullName>
  <label>投票済</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>