de2/force-app/main/default/objects/TestObj__c/fields/nmp_te__c.field-meta.xml
<CustomField>
  <fullName>nmp_te__c</fullName>
  <label>NmpTE</label>
  <type>Lookup</type>
  <referenceTo>Lead</referenceTo>
  <relationshipLabel>リード</relationshipLabel>
  <relationshipName>Leads</relationshipName>
  <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>