de2/force-app/main/default/objects/TestObj__c/fields/Note1__c.field-meta.xml
<CustomField>
  <fullName>Note1__c</fullName>
  <label>備考①</label>
  <type>TextArea</type>
</CustomField>