de2/force-app/main/default/objects/TestObj__c/fields/Note2__c.field-meta.xml
<CustomField>
  <fullName>Note2__c</fullName>
  <label>備考②</label>
  <type>TextArea</type>
</CustomField>