de2/force-app/main/default/objects/TestObj__c/fields/ProcessStatus__c.field-meta.xml
<CustomField>
  <fullName>ProcessStatus__c</fullName>
  <label>処理ステータス</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>ドラフト</fullName>
      </value>
      <value>
        <fullName>処理中</fullName>
      </value>
      <value>
        <fullName>処理済</fullName>
      </value>
      <value>
        <fullName>エラー</fullName>
      </value>
    </valueSetDefinition>
    <restricted>true</restricted>
  </valueSet>
</CustomField>