de2/force-app/main/default/objects/TestObj__c/fields/testurl__c.field-meta.xml
<CustomField>
  <fullName>testurl__c</fullName>
  <label>テストurl</label>
  <type>Url</type>
<required>true</required>




</CustomField>