de2/force-app/main/default/objects/TestObj__c/fields/UrgentPhone__c.field-meta.xml
<CustomField>
  <fullName>UrgentPhone__c</fullName>
  <label>緊急連絡先</label>
  <type>Phone</type>
</CustomField>