de2/force-app/main/default/objects/TestObj__c/fields/VoteComment__c.field-meta.xml
<CustomField>
  <fullName>VoteComment__c</fullName>
  <label>投票コメント</label>
  <type>LongTextArea</type>
  <length>5000</length>
</CustomField>