de2/force-app/main/default/objects/TestObj__c/fields/VoteDate__c.field-meta.xml
<CustomField>
  <fullName>VoteDate__c</fullName>
  <label>投票日</label>
  <type>Date</type>
</CustomField>