de2/force-app/main/default/objects/TestObj__c/fields/VoteNumber__c.field-meta.xml
<CustomField>
  <fullName>VoteNumber__c</fullName>
  <label>投票番号</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>0</scale>
</CustomField>