de2/force-app/main/default/objects/TestObj__c/fields/VoteResult__c.field-meta.xml
<CustomField>
  <fullName>VoteResult__c</fullName>
  <label>投票結果</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>承認</fullName>
      </value>
      <value>
        <fullName>否認</fullName>
      </value>
      <value>
        <fullName>白票</fullName>
      </value>
    </valueSetDefinition>
    <restricted>true</restricted>
  </valueSet>
</CustomField>