de2/force-app/main/default/objects/TestObj__c/fields/VoterInfoURL__c.field-meta.xml
<CustomField>
  <fullName>VoterInfoURL__c</fullName>
  <label>有権者情報掲載サイト</label>
  <type>Url</type>
  <inlineHelpText>公開されている情報がある場合はURLを入力</inlineHelpText>
</CustomField>