de2/force-app/main/default/objects/TestObj__c/fields/VoterName__c.field-meta.xml
<CustomField>
  <fullName>VoterName__c</fullName>
  <label>投票者名</label>
  <type>Text</type>
  <length>50</length>
</CustomField>