de2/force-app/main/default/objects/TestObj__c/fields/VoteToId__c.field-meta.xml
<CustomField>
  <fullName>VoteToId__c</fullName>
  <label>投票先</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>投票</relationshipLabel>
  <relationshipName>VoteToIds</relationshipName>
</CustomField>